manifests/gatekeeper-policies/10-constraint-block-latest-tag.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockLatestTag
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  name: block-latest-tag
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet", "DaemonSet"]
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
            - kube-system
            - kube-public
            - kube-node-lease
            - gatekeeper-system
            - metallb-system
            - longhorn-system
            - nfs-provisioner
            - cert-manager
            - ingress-nginx
            - chaos-mesh
            - velero
            - mail
            - sign
            - collab
            - argo-rollouts
            - vpa-system
            - system-upgrade
            - chat              # matrix-synapse signing key job uses bitnami/kubectl:latest by default
            - erp
