manifests/gatekeeper-policies/16-constraint-require-ingress-tls.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireIngressTLS
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  name: require-ingress-tls
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["networking.k8s.io"]
        kinds: ["Ingress"]
