manifests/gatekeeper-policies/21-constraint-require-seccomp.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireSeccomp
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  name: require-seccomp
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet", "DaemonSet"]
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
            - kube-system
            - kube-public
            - kube-node-lease
            - gatekeeper-system
            - metallb-system
            - longhorn-system
            - nfs-provisioner
            - cert-manager
            - ingress-nginx
            - chaos-mesh
            - velero
            - falco
            - kured
